--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Ilya Znamensky <i.znamensky@semrush.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack-dev-server --watch"
+  },
   "dependencies": {
     "normalize.css": "^5.0.0",
     "react": "^15.4.1",
@@ -19,16 +22,27 @@
   "devDependencies": {
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "bem-cl": "^1.0.2",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.24.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
+    "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
