--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
+    "redux-saga": "^0.13.0",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
