--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "plugins": [
         "react-hot-loader/babel",
         "transform-class-properties",
-        "transform-decorators-legacy"
+        "transform-decorators-legacy",
+        "transform-object-rest-spread"
     ]
 }
