--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Ilya Znamensky <i.znamensky@semrush.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --watch"
+    "dev": "webpack-dev-server --watch",
+    "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
     "normalize.css": "^5.0.0",
@@ -32,6 +33,7 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "bem-cl": "^1.0.2",
+    "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
@@ -46,6 +48,7 @@
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "^1.16.2",
-    "webpack-hot-middleware": "^2.13.2"
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-md5-hash": "^0.0.5"
   }
 }
