--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ilya Znamensky <i.znamensky@semrush.com>",
   "license": "MIT",
   "scripts": {
+    "start": "serve ./public",
     "dev": "webpack-dev-server --watch",
     "build": "NODE_ENV=production webpack"
   },
@@ -20,6 +21,7 @@
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "redux-saga": "^0.13.0",
+    "serve": "^2.1.2",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
