--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "scripts": {
     "start": "serve ./public",
+    "test": "jest",
     "dev": "webpack-dev-server --watch",
     "build": "NODE_ENV=production webpack"
   },
@@ -43,6 +44,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "jest": "^18.1.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
