--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.13.2",
     "webpack-md5-hash": "^0.0.5"
+  },
+  "jest": {
+    "modulePaths": ["./src"]
   }
 }
