--- a/package.json
+++ b/package.json
@@ -10,11 +10,24 @@
   "license": "MIT",
   "scripts": {
     "start": "serve ./public",
-    "test": "jest --config ./jest.json",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "dev": "webpack-dev-server --watch",
     "build": "NODE_ENV=production webpack"
   },
+  "jest": {
+    "rootDir": "./src",
+    "modulePaths": ["./src"],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "testRegex": "/tests/.*\\.spec\\.(js|jsx)$",
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|styl)$": "<rootDir>/__mocks__/styleMock.js"
+    }
+  },
   "dependencies": {
+    "bem-cn": "^2.1.3",
     "normalize.css": "^5.0.0",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
@@ -27,6 +40,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.20.0",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -38,6 +52,8 @@
     "bem-cl": "^1.0.2",
     "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.7.0",
+    "enzyme-to-json": "^1.4.5",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-react": "^6.8.0",
@@ -45,7 +61,9 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "jest": "^18.1.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
