--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "modulePaths": ["./src"],
     "snapshotSerializers": ["enzyme-to-json/serializer"],
     "testRegex": "/tests/.*\\.spec\\.(js|jsx)$",
+    "setupFiles" : ["<rootDir>/../jestSetup"],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|styl)$": "<rootDir>/__mocks__/styleMock.js"
